testdata/baselines/reference/submodule/conformance/genericSetterInClassTypeJsDoc.errors.txt
genericSetterInClassTypeJsDoc.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.
genericSetterInClassTypeJsDoc.js(7,17): error TS8010: Type annotations can only be used in TypeScript files.


==== genericSetterInClassTypeJsDoc.js (2 errors) ====
    /**
    ~~~
     * @template T
    ~~~~~~~~~~~~~~
     */
    ~~~
     class Box {
    ~~~~~~~~~~~~
        #value;
    ~~~~~~~~~~~
    
    
        /** @param {T} initialValue */
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        constructor(initialValue) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            this.#value = initialValue;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        
    ~~~~
        /** @type {T} */
    ~~~~~~~~~~~~~~~~~~~~
        get value() {
    ~~~~~~~~~~~~~~~~~
            return this.#value;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    
    
        set value(value) {
    ~~~~~~~~~~~~~~~~~~~~~~
            this.#value = value;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    new Box(3).value = 3;
    